[gd_scene load_steps=10 format=3 uid="uid://fk4g8gvi4ylj"]

[ext_resource type="Script" path="res://Baccarat/table.gd" id="1_bvlji"]
[ext_resource type="PlaneMesh" uid="uid://jd3cjd3de5ge" path="res://example/table.tres" id="2_xqsm6"]
[ext_resource type="Material" uid="uid://xh4xj2hdvo0g" path="res://example/table_greeb.tres" id="3_vkbm7"]
[ext_resource type="PackedScene" uid="uid://d1uvcisduvvj" path="res://addons/card_3d/scenes/card_collection_3d.tscn" id="4_kqfgc"]
[ext_resource type="PackedScene" uid="uid://bwj6sgafilrk8" path="res://Baccarat/face_card_3d.tscn" id="4_rcrqi"]
[ext_resource type="Script" path="res://addons/card_3d/scripts/card_layouts/line_card_layout.gd" id="5_4ur86"]
[ext_resource type="BoxMesh" uid="uid://d3wgqugu1eq8h" path="res://example/card_mesh.tres" id="6_5wfqm"]

[sub_resource type="Resource" id="Resource_w7312"]
script = ExtResource("5_4ur86")

[sub_resource type="Resource" id="Resource_vepqr"]
script = ExtResource("5_4ur86")

[node name="Node3d" type="Node3D"]

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.041317, 0, 9)
current = true
fov = 84.6

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
shadow_enabled = true

[node name="Table" type="Node3D" parent="."]
script = ExtResource("1_bvlji")

[node name="TableSurface" type="MeshInstance3D" parent="Table"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, -1)
mesh = ExtResource("2_xqsm6")
surface_material_override/0 = ExtResource("3_vkbm7")

[node name="Button_Play" type="Button" parent="Table"]
offset_left = 35.0
offset_top = 21.0
offset_right = 114.0
offset_bottom = 75.0
text = "Play
"

[node name="Player_Hand" parent="Table" instance=ExtResource("4_kqfgc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.73189, -4.64072, 0)
card_layout_strategy = SubResource("Resource_w7312")

[node name="Dealer_Hand" parent="Table" instance=ExtResource("4_kqfgc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.6708, -4.57966, 0)
card_layout_strategy = SubResource("Resource_vepqr")

[node name="Deck" parent="." instance=ExtResource("4_rcrqi")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 11.086, 4.885, -0.687)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Deck"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.111376)
mesh = ExtResource("6_5wfqm")

[connection signal="pressed" from="Table/Button_Play" to="Table" method="_on_button_play_pressed"]
